stretched submit button and fixed styling to forms

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,4 +16,12 @@
 
 .pizza-card {
     background-color: red;
+    margin: 8px;
+    padding: 10px;
+}
+
+.submit {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
